# Provenance

./: .env.example  .gitattributes  .gitignore  pyproject.toml
docs/: FAILURES.md  INTERVIEW_PREP.md  LEARNINGS.md  TEST_CORPUS.md  TRADEOFFS.md
scripts/: smoke_test_detector.py  smoke_test_providers.py
src/config/: config.py
src/configurations/: config.py  provider.py  schema.py
src/ingestion/: detector.py  extractor.py  figures.py  ocr.py  tables.py  validator.py
