[project]
name = "provenance"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.109.1",
    "pymupdf>=1.25.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "sentence-transformers>=5.5.1",
    "img2pdf>=0.6.3",
    "pytesseract>=0.3.13",
]

[tool.pyright]
extraPaths = ["src"]
